# rewriteInRust

./: .gitignore  CLAUDE.md  Justfile  PROJECT_DESIGN.html  PROJECT_DESIGN.legacy.md  PROJECT_DESIGN.md  REVISION_BRIEF.md  REVISION_BRIEF_V07.md  REVISION_BRIEF_V09.md  view-design.sh
.claude-plugin/: marketplace.json
.claude/agents/: design-checker.md
.github/workflows/: ci.yml
cli/: Cargo.toml  deny.toml
cli/.rust-migration/: source-graph.db
cli/crates/cli/: Cargo.toml
cli/crates/cli/src/: lib.rs  main.rs
cli/crates/cli/tests/: cli_e2e.rs  orchestration_e2e.rs
cli/crates/core/: Cargo.toml
cli/crates/core/examples/: dump_import_graph.rs  dump_symbol_graph.rs  dump_tiers.rs
cli/crates/core/src/: detect.rs  error.rs  graph.rs  lib.rs  merge.rs  process.rs  profile.rs  reconcile.rs  response.rs  rule_version.rs  scaffold.rs  schema.sql  state.rs  ts_extract.rs  validate.rs  worktree.rs
cli/crates/core/src/graph/: build.rs  decompose.rs  export.rs  fingerprint.rs  mod.rs  persist.rs  query.rs  topo.rs
cli/crates/core/src/lang/: go.rs  mod.rs  python.rs  registry.rs  typescript.rs
cli/crates/core/src/profile/: detect.rs  mod.rs  tools.rs
cli/crates/core/src/scaffold/: degrade_report.rs  ffi.rs  mod.rs  template.rs
cli/crates/core/src/state/: machine.rs  mod.rs
cli/crates/core/src/stats/: community.rs  compare.rs  coverage.rs  loc.rs  mod.rs  quality.rs
cli/crates/core/src/types/: common.rs  config.rs  graph.rs  mod.rs  parallel.rs  state.rs
cli/crates/core/src/validate/: mod.rs  rules.rs  tiers.rs
cli/crates/core/tests/: ast_contract.rs  ast_contract_go.rs  ast_contract_python.rs  go_ground_truth.rs  ground_truth.rs  petgraph_isolation.rs  proptest_graph.rs  python_ground_truth.rs  tree_sitter_precision.rs
cli/fuzz/: Cargo.toml  rust-toolchain.toml
cli/fuzz/fuzz_targets/: build_graph_fuzz.rs  parse_node_extra_fuzz.rs
docs/: PLAN-M2.md  PLAN-M3.md  PLAN-M4.md  PLAN.md  STATUS-M1-archive.md  STATUS-M2-archive.md  STATUS.md  dec-gate-acceptance.md  decomposition-redesign.md  m4-orch-01-acceptance.md  m4-quality-baseline.md  m4-sprint-d-acceptance.md  m4-sprint-e-acceptance.md  phase2-scc-per-file-handoff.md  plan-populate-batch-unify.md  sprint-d-acceptance.md  sprint-f-acceptance.md
docs/decisions/: 001-plugin-viability.md  002-parser-choice.md  003-m2-parallel-write-isolation.md  004-scc-fold-break-cycle.md  005-signature-in-graph.md  006-scc-per-file-stub-first.md  007-ffi-bridge-cancelled.md  008-m2-deviations.md  009-adapter-shell-mode-cancelled.md  010-dec-gate-python-classifier-and-batching.md  011-coupling-agglomerative-decomposition.md  012-m3-debt-batch-a-deviations.md  013-danger-signal-to-state.md  014-rule-version-registry.md  015-reset-idempotent-retry-boundary.md  016-watchdog-stall-recovery-boundary.md  017-quota-pause-resume-boundary.md  018-keep-parallel-migration.md  018-serial-migration-drop-parallel.md  019-post-translation-review-gate.md
docs/design/: 01-positioning-and-methodology.md  02-architecture.md  03-execution-model.md  04-toolchain.md  05-documentation-system.md  06-plugin-structure.md  07-pitfalls-and-risks.md  08-roadmap-and-reference.md  09-appendix-schemas.md  README.md  index.html
docs/learnings/: agent-skill-prompt-guide.md
docs/review/: .gitignore  M2-plan-review-2026-06-15.md  REVIEW_LOOP.md  findings-ledger.md  round-1-report.md  round-2-report.md  round-3-report.md  round-4-report.md  round-5-report.md  round-6-report.md  round-7-report.md  round-8-report.md  round-9-report.md  round-workflow.mjs
fixtures/circular-deps/: ground-truth.json  package.json
fixtures/diamond-deps/: ground-truth.json  package.json
fixtures/edge-cases/: ground-truth.json  package.json  tsconfig.json
fixtures/go-circular-deps/: go.mod  ground-truth.json  main.go
fixtures/go-diamond-deps/: go.mod  ground-truth.json  main.go
fixtures/go-linear-deps/: go.mod  ground-truth.json  main.go
fixtures/go-pkg-deps/: go.mod  ground-truth.json  main.go
fixtures/linear-deps/: ground-truth.json  package.json  tsconfig.json
fixtures/py-circular-deps/: ground-truth.json
fixtures/py-diamond-deps/: ground-truth.json
fixtures/py-linear-deps/: ground-truth.json
fixtures/py-pkg-deps/: ground-truth.json  main.py
fixtures/ts-mechanical-batch/: ground-truth.json  package.json
plugin/.claude-plugin/: plugin.json
(+128 files in other folders)
