[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snowzhaozhj/rewriteInRust"

[workspace.dependencies]
# 图引擎
petgraph = "0.6"
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }

# AST 解析
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"

# 代码统计
tokei = "12"

# CLI
clap = { version = "4", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"

# Schema 校验
jsonschema = "0.18"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# 测试
insta = { version = "1", features = ["json"] }
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
