[package]
name = "rustmigrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "rustmigrate_cli"
path = "src/lib.rs"

[[bin]]
name = "rustmigrate"
path = "src/main.rs"

[dependencies]
rustmigrate-core = { path = "../core" }
clap.workspace = true
serde_json.workspace = true
