[package]
name = "rustmigrate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
petgraph.workspace = true
rusqlite.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tokei.workspace = true
strum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
toml.workspace = true
chrono.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
proptest.workspace = true
# ast_contract 测试直接建 parser 验证 typescript.rs 依赖的 AST 契约
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
